--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "xutengx/exception",
-	"description": "conf",
+	"description": "exception",
 	"keywords": [
 		"exception",
 		"xuteng",
